--- a/.gitignore
+++ b/.gitignore
@@ -349,4 +349,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
-deploy/main.parameter.bicep.json
+deploy/main.parameters.json
