--- a/.gitignore
+++ b/.gitignore
@@ -349,4 +349,6 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
+# local setting
 deploy/main.parameters.json
+.python-version 
